Extend #5423 to also apply to single-fluid Output Hatches